--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <html>
+  <head>
+  </head>
+  <body>
+    <center>
+    <h3> Halena Le's Website </h3>
+      
+      <img src="https://png.pngtree.com/png-vector/20230729/ourmid/pngtree-basketball-clipart-cartoon-angry-orange-basketball-character-with-sad-face-vector-png-image_6792424.png">
 
-
-
-
-
-
-
+   </body>
 </html>
+
+<style>
+body {
+  background-color: lightblue;
+}
+
+h3 {
+  color: beige;
+  font-size: 250%;
+  text-decoration-line: overline underline;
+  text-decoration-style: dashed;
+  text-decoration-color: blue;
+  letter-spacing: 2px;
+  text-shadow: 2px 2px 7px red;
+}
+  
+</style>
