--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <html>
   <head>
+   <ul>
+  <li><a class="active" href="#index.html">Home</a></li>
+  <li><a href="#Projects">Projects</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+
   </head>
   <body>
     <center>
-    <h3> Halena Le's Website </h3>
+    <h3> Projects </h3>
+      <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/wB5W7f7AM7-JGCkP0krtl6BsDlOpW3mKU1ebT48pODA/embed?nosource"></iframe>
       
-      <img src="https://png.pngtree.com/png-vector/20230729/ourmid/pngtree-basketball-clipart-cartoon-angry-orange-basketball-character-with-sad-face-vector-png-image_6792424.png">
+     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/EjqGyncKwfoH0j7kxFg4r3wlHlZko7MORrJo1VWkMOw/embed"></iframe>
 
-   </body>
+      </body>
 </html>
 
-<style>
 body {
   background-color: lightblue;
 }
@@ -24,5 +31,26 @@ h3 {
   letter-spacing: 2px;
   text-shadow: 2px 2px 7px red;
 }
-  
-</style>
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #2A628F;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
