--- a/index.html
+++ b/index.html
@@ -6,16 +6,14 @@
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
-
   </head>
   <body>
     <center>
-    <h3> Projects </h3>
-      <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/wB5W7f7AM7-JGCkP0krtl6BsDlOpW3mKU1ebT48pODA/embed?nosource"></iframe>
+    <h3> Halena Le's Website </h3>
       
-     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/EjqGyncKwfoH0j7kxFg4r3wlHlZko7MORrJo1VWkMOw/embed"></iframe>
+      <img src="https://png.pngtree.com/png-vector/20230729/ourmid/pngtree-basketball-clipart-cartoon-angry-orange-basketball-character-with-sad-face-vector-png-image_6792424.png">
 
-      </body>
+   </body>
 </html>
 
 body {
@@ -34,7 +32,7 @@ h3 {
 ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 5px;
   overflow: hidden;
   background-color: #2A628F;
 }
@@ -54,3 +52,5 @@ li a {
 li a:hover {
   background-color: #111;
 }
+
+ 
