--- a/projectspage.html
+++ b/projectspage.html
@@ -2,7 +2,7 @@
   <head>
    <ul>
   <li><a class="active" href="#index.html">Home</a></li>
-  <li><a href="#projects">Projects</a></li>
+  <li><a href="#projectspage.html">Projects</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
