--- a/projectspage.html
+++ b/projectspage.html
@@ -1,27 +1,25 @@
 <html>
   <head>
-
-  </head>
-  <body>
-
-     <ul>
+   <ul>
   <li><a class="active" href="#index.html">Home</a></li>
-  <li><a href="#projectspage.html">Projects</a></li>
+  <li><a href="#projectpage.html">Projects</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
 </ul>
 
-    
+  </head>
+  <body>
     <center>
     <h3> Projects </h3>
       <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/wB5W7f7AM7-JGCkP0krtl6BsDlOpW3mKU1ebT48pODA/embed?nosource"></iframe>
       
      <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/EjqGyncKwfoH0j7kxFg4r3wlHlZko7MORrJo1VWkMOw/embed"></iframe>
 
-
       </body>
 </html>
-body {
+
+<style>
+  body {
   background-color: lightblue;
 }
 
@@ -57,3 +55,4 @@ li a {
 li a:hover {
   background-color: #111;
 }
+</style>
